@@ -1,3 +1,6 @@
+2012-12-13  ?, Corey Minyard <minyard@acm.org>
+	* devcfg.c: Add support for a bunch of high-speed baud rates.
+
 2012-12-07  Corey Minyard <minyard@acm.org>
 
 	* utils.c: Change hints.ai_family from AF_INET6 to AF_UNSPEC.
